--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -4,6 +4,6 @@ import { Blocks } from "@datas/blocks";
 import AppLayout from "@layouts/AppLayout.astro";
 ---
 
-<AppLayout title="Beranda">
-    <BlocksComponent blocks={Blocks.index} />
+<AppLayout title="Menu">
+    <BlocksComponent blocks={Blocks.menu} />
 </AppLayout>
