--- a/src/components/Blocks/FooterText.astro
+++ b/src/components/Blocks/FooterText.astro
@@ -10,6 +10,6 @@ interface Props {
 const { content } = Astro.props;
 ---
 
-<footer class="relative mt-auto text-center">
+<footer class="relative py-4 text-center">
     <small>{content.text}</small>
 </footer>
