--- a/src/components/Blocks/HeaderProfile.astro
+++ b/src/components/Blocks/HeaderProfile.astro
@@ -35,7 +35,7 @@ const cafeStatus = isOpen ? "Buka" : "Tutup";
     <Image
         src={content.bgCover}
         alt={`Background cover ${content.title}`}
-        class="absolute inset-0 w-full h-full object-cover object-center mask-b-from-0 mask-b-to-65"
+        class="absolute inset-0 w-full h-full object-cover object-center"
     />
     <div class="flex flex-col items-center">
         <!-- Avatar -->
