--- a/src/components/Blocks/ListLink.astro
+++ b/src/components/Blocks/ListLink.astro
@@ -12,7 +12,7 @@ const { content } = Astro.props;
 ---
 
 <section class="relative">
-    <ul class="menu menu-vertical w-full gap-2">
+    <ul class="menu menu-vertical w-full gap-2 bg-transparent">
         {
             content.map((link) => {
                 return (
