--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -1,3 +1,3 @@
-<div class="transition-all duration-500 toast toast-top toast-center hidden opacity-0" id="alert-element">
+<div class="z-20 transition-all duration-500 toast toast-top toast-center hidden opacity-0" id="alert-element">
     <div class="alert font-bold tracking-wide" id="alert-text"></div>
 </div>
