--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -26,7 +26,7 @@ const currentRoute = Astro.url.pathname;
         <Alert />
         <div class="container mx-auto">
             <div class="relative min-h-screen flex flex-col max-w-md mx-auto md:shadow-xl md:shadow-base-300">
-                <div class="flex bg-blue-50 flex-col" transition:animate={FadeIn}>
+                <div class="flex flex-col" transition:animate={FadeIn}>
                     <slot />
                 </div>
                 <div class="dock mt-auto relative bg-base-200 z-10" transition:animate="none">
