--- a/src/components/ShareButton.astro
+++ b/src/components/ShareButton.astro
@@ -3,13 +3,15 @@ import { site } from "@datas/site";
 import clsx from "clsx";
 import XIcon from "@icons/lucide/x.svg";
 import ShareIcon from "@icons/lucide/share2.svg";
+import Users from "@icons/lucide/users.svg";
 
 // Type & Interfaces
 interface Props {
     class?: string;
+    href?: string;
 }
 // Vars
-const { class: customClass, ...rest } = Astro.props;
+const { class: customClass, href, ...rest } = Astro.props;
 ---
 
 <button
@@ -22,12 +24,18 @@ const { class: customClass, ...rest } = Astro.props;
 
 <dialog id="modalCopy" class="modal">
     <div class="modal-box w-full max-w-xs">
-        <h3 class="text-xl font-bold mb-4 text-center">Ajak teman ke sini</h3>
+        <h3 class="text-xl font-bold text-center mb-6">
+            <Users class="inline-flex self-center me-2" /> Ajak temanmu kesini
+        </h3>
         <div class="flex flex-col gap-2">
             {
                 site.shareOptions.map((item) => {
                     return (
-                        <button class="btn btn-soft btn-primary justify-start" data-action={item.action}>
+                        <button
+                            class="btn btn-soft btn-primary justify-start"
+                            data-action={item.action}
+                            data-params={href}
+                        >
                             <item.icon />
                             <span>{item.label}</span>
                         </button>
