--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -4,8 +4,8 @@ import { DockMenu } from "@datas/blocks";
 import { clsx } from "clsx";
 import CommonHead from "@components/CommonHead.astro";
 import { FadeIn } from "../utils/transition-animate/fade-in";
-import Alert from "@components/Alert.astro";
 import "../styles/global.css";
+import "toastify-js/src/toastify.css";
 
 // Type & Interfaces
 interface Props {
@@ -23,31 +23,25 @@ const currentRoute = Astro.url.pathname;
         <CommonHead {title} />
     </head>
     <body>
-        <Alert />
-        <div class="container mx-auto">
-            <div class="relative min-h-screen flex flex-col max-w-md mx-auto md:shadow-xl md:shadow-base-300">
-                <div class="flex flex-col" transition:animate={FadeIn}>
-                    <slot />
-                </div>
-                <div class="dock mt-auto relative bg-base-200 z-10" transition:animate="none">
-                    {
-                        DockMenu.map((item) => {
-                            const selectedRoute = currentRoute === item.href;
-                            return (
-                                <a href={item.href} class="text-base-content">
-                                    <item.icon class={clsx(selectedRoute ? "fill-primary/25" : "")} />
-                                    <span
-                                        class="dock-label transition-all duration-500 font-bold"
-                                        hidden={!selectedRoute}
-                                    >
-                                        {item.label}
-                                    </span>
-                                </a>
-                            );
-                        })
-                    }
-                </div>
+        <div class="min-h-screen relative max-w-md mx-auto md:shadow-xl md:shadow-base-300">
+            <div class="flex flex-1 flex-col pb-24" transition:animate={FadeIn}>
+                <slot />
             </div>
+        </div>
+        <div class="dock bg-base-200 max-w-md mx-auto z-10" transition:animate="none">
+            {
+                DockMenu.map((item) => {
+                    const selectedRoute = currentRoute === item.href;
+                    return (
+                        <a href={item.href} class="text-base-content">
+                            <item.icon class={clsx(selectedRoute ? "fill-primary/25" : "")} />
+                            <span class="dock-label transition-all duration-500 font-bold" hidden={!selectedRoute}>
+                                {item.label}
+                            </span>
+                        </a>
+                    );
+                })
+            }
         </div>
         <script src="../utils/handle-data-action.ts"></script>
     </body>
