--- a/src/components/ShareButton.astro
+++ b/src/components/ShareButton.astro
@@ -8,10 +8,9 @@ import Users from "@icons/lucide/users.svg";
 // Type & Interfaces
 interface Props {
     class?: string;
-    href?: string;
 }
 // Vars
-const { class: customClass, href, ...rest } = Astro.props;
+const { class: customClass, ...rest } = Astro.props;
 ---
 
 <button
@@ -31,11 +30,7 @@ const { class: customClass, href, ...rest } = Astro.props;
             {
                 site.shareOptions.map((item) => {
                     return (
-                        <button
-                            class="btn btn-soft btn-primary justify-start"
-                            data-action={item.action}
-                            data-params={href}
-                        >
+                        <button class="btn btn-soft btn-primary justify-start" data-action={item.action}>
                             <item.icon />
                             <span>{item.label}</span>
                         </button>
