--- a/src/components/Blocks/Header.astro
+++ b/src/components/Blocks/Header.astro
@@ -18,7 +18,7 @@ const { content } = Astro.props;
                     if (Array.isArray(item.children)) {
                         return (
                             <div class="dropdown dropdown-end">
-                                <div tabindex="0" class="btn btn-sm btn-circle btn-primary" role="button">
+                                <div tabindex="0" class="btn btn-sm btn-circle btn-ghost btn-primary" role="button">
                                     <item.icon class="w-5" />
                                 </div>
                                 <ul
