--- a/src/components/Blocks/ListMenu.astro
+++ b/src/components/Blocks/ListMenu.astro
@@ -22,9 +22,9 @@ const { content } = Astro.props;
                             {item.title && <h3 class="text-xl font-bold">{item.title}</h3>}
                             {item.description && <p class="text-sm text-base-content/75">{item.description}</p>}
                         </div>
-                        <div>
+                        <div class="tooltip tooltip-left" data-tip="Bagikan menu">
                             <button
-                                class="btn btn-ghost btn-circle"
+                                class="btn btn-sm btn-soft btn-circle"
                                 data-action="copyLinkMenu"
                                 data-params={JSON.stringify({
                                     title: item.title,
@@ -32,7 +32,7 @@ const { content } = Astro.props;
                                     href: item.id
                                 })}
                             >
-                                <ShareIcon />
+                                <ShareIcon class="w-5" />
                             </button>
                         </div>
                     </div>
