--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { site } from "@datas/site";
+import { now, site } from "@datas/site";
 import Dock from "@components/Dock.astro";
 import CommonHead from "@components/CommonHead.astro";
 import { FadeIn } from "../utils/transition-animate/fade-in";
@@ -21,6 +21,12 @@ const { title } = Astro.props;
         <CommonHead {title} />
     </head>
     <body>
+        <div
+            class="absolute bottom-1/12 z-10 w-fit h-fit bg-accent text-accent-content p-2 rounded-box"
+            transition:animate="none"
+        >
+            {now}
+        </div>
         <div class="min-h-screen relative max-w-md mx-auto md:shadow-xl md:shadow-base-300">
             <div class="flex flex-1 flex-col pb-24" transition:animate={FadeIn}>
                 <slot />
