--- a/src/components/OpeningHoursButton.astro
+++ b/src/components/OpeningHoursButton.astro
@@ -6,9 +6,9 @@ import CalendarClock from "@icons/lucide/calendar-clock.svg";
 import Str from "lodash";
 import { format } from "date-fns";
 import { id } from "date-fns/locale";
-import { fromZonedTime } from "date-fns-tz";
+import { toZonedTime } from "date-fns-tz";
 
-const now = fromZonedTime(new Date(), site.timezone);
+const now = toZonedTime(new Date(), site.timezone);
 
 // Type & Interfaces
 interface Props {
