--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -5,9 +5,9 @@ import CommonHead from "@components/CommonHead.astro";
 import { FadeIn } from "../utils/transition-animate/fade-in";
 import "../styles/global.css";
 import "toastify-js/src/toastify.css";
-import { fromZonedTime } from "date-fns-tz";
+import { toZonedTime } from "date-fns-tz";
 
-const now = fromZonedTime(new Date(), site.timezone);
+const now = toZonedTime(new Date(), site.timezone);
 
 // Type & Interfaces
 interface Props {
@@ -36,6 +36,6 @@ const { title } = Astro.props;
             </div>
         </div>
         <Dock />
-        <script src="../utils/script.ts"></script>
+        <script src="../utils/utils.ts"></script>
     </body>
 </html>
