--- a/src/components/Blocks/ListMenu.astro
+++ b/src/components/Blocks/ListMenu.astro
@@ -16,15 +16,15 @@ const { content } = Astro.props;
     {
         content.map((item) => {
             return (
-                <div class="flex flex-col px-4 scroll-mt-20 mb-6" id={item.id}>
-                    <div class="flex flex-row justify-between my-4 items-center">
+                <div class="flex flex-col px-4 mb-6" id={item.id}>
+                    <div class="flex flex-row justify-between my-6 items-center">
                         <div>
-                            {item.title && <h3 class="text-xl font-bold">{item.title}</h3>}
+                            {item.title && <h3 class="text-2xl font-bold">{item.title}</h3>}
                             {item.description && <p class="text-sm text-base-content/75">{item.description}</p>}
                         </div>
                         <div class="tooltip tooltip-left" data-tip="Bagikan menu">
                             <button
-                                class="btn btn-sm btn-soft btn-circle"
+                                class="btn btn-soft btn-circle"
                                 data-action="copyLinkMenu"
                                 data-params={JSON.stringify({
                                     title: item.title,
@@ -32,7 +32,7 @@ const { content } = Astro.props;
                                     href: item.id
                                 })}
                             >
-                                <ShareIcon class="w-5" />
+                                <ShareIcon />
                             </button>
                         </div>
                     </div>
