--- a/src/components/Blocks/HeaderProfile.astro
+++ b/src/components/Blocks/HeaderProfile.astro
@@ -44,7 +44,7 @@ const cafeStatus = isOpen ? "Buka" : "Tutup";
         <div class={clsx("avatar indicator")}>
             <span
                 class={clsx(
-                    "indicator-item indicator-bottom indicator-center badge badge-soft badge-outline",
+                    "indicator-item indicator-bottom indicator-center badge badge-soft badge-outline font-bold",
                     isOpen ? "badge-success" : "badge-error"
                 )}>{cafeStatus}</span
             >
