--- a/src/components/Blocks/Fab.astro
+++ b/src/components/Blocks/Fab.astro
@@ -14,19 +14,27 @@ const { content } = Astro.props;
             <div tabindex="0" role="button" class="btn btn-xl btn-primary btn-circle">
                 <content.icon />
             </div>
-            <ul class="dropdown-content menu bg-base-100 shadow-md shadow-base-content/35 w-64 mb-4 rounded-box">
+            <ul
+                class="dropdown-content menu bg-base-100 shadow-md shadow-base-content/35 w-64 mb-4 rounded-box overflow-y-auto"
+            >
                 {content.children.title && <li class="menu-title text-primary font-bold">{content.children.title}</li>}
                 {
                     content.children.children.map((item) => {
-                        if (item.href) {
+                        if (item.type === "anchor") {
                             return (
                                 <li>
                                     <a href={item.href}>{item.label ?? <item.icon />}</a>
                                 </li>
                             );
                         }
-                        if (item.action) {
-                            return <button data-action={item.action}>{item.label ?? <item.icon />}</button>;
+                        if (item.type === "action") {
+                            return (
+                                <li>
+                                    <button data-action={item.action} data-params={JSON.stringify({ href: item.href })}>
+                                        {item.label ?? <item.icon />}
+                                    </button>
+                                </li>
+                            );
                         }
                     })
                 }
