--- a/src/components/Blocks/ListMenu.astro
+++ b/src/components/Blocks/ListMenu.astro
@@ -54,7 +54,7 @@ const { content } = Astro.props;
                                             alt={`Menu ${item.title} - ${index}`}
                                             width={image.width}
                                             height={image.height}
-                                            class="rounded-box shadow shadow-secondary/35"
+                                            class="rounded-box shadow shadow-secondary/35 aspect-auto"
                                             loading="lazy"
                                         />
                                     );
